--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Kristine Y Ma
+title: Kristine Y Ma | 
+name: Kristine Y Ma
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -31,8 +32,12 @@ github_username:  kyma414
 domain: kyma414.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 repository: kyma414/kyma414.github.io
 
+locale: "en-US"
+subtitle: "Here is a subtitle"
+
 # Build settings
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+minimal_mistakes_skin: "dirt"
 plugins:
   - jekyll-feed
   - jekyll-include-cache
